# Perudo

./: README.md  pyproject.toml
src/perudo/: __init__.py  perudo.py  sprites.py
